{
    "name": "InputSystems",
    "maps": [
        {
            "name": "Player",
            "id": "fe3ca72b-c959-4f1a-a9e3-0330154e3a5a",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "58df6658-28c4-4146-809d-2d180ab03ab9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "6f6c8748-e545-4ba6-b529-44dd2ef1dd2c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "83279a4c-79f6-42c7-9655-bfd6e72e261b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PopMachineItem",
                    "type": "Button",
                    "id": "893cfa29-60f8-4cb1-9867-92a83ee42796",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUp",
                    "type": "Button",
                    "id": "dcdb001e-f789-44c2-8580-33ef7fafcebb",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drop",
                    "type": "Button",
                    "id": "05f45beb-3979-43d1-bbec-153149727afc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RunMachine",
                    "type": "Button",
                    "id": "6e766f28-cec5-4e42-a0e4-41546c6ada3c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseItem",
                    "type": "Button",
                    "id": "a372a52d-6042-4888-b1e2-4a5d0c5c0ec5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "de068e29-593a-443e-985a-dc4ff003ab0c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "53df2939-627b-4ab9-9546-a1b2fd4e6cf8",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86bbba4d-4da8-42cf-b882-1a7cc537cff5",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9173267a-3e29-421b-830f-6ecae632e10d",
                    "path": "<Keyboard>/r",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PopMachineItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9026344-0bec-493e-ad76-26aacd2591cf",
                    "path": "<Keyboard>/t",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PickUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8a6a19e-662c-4db4-b8a5-bca78782df2d",
                    "path": "<Keyboard>/g",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Drop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87330ebe-cf1b-480b-8d77-885a0cc2ab7d",
                    "path": "<Keyboard>/f",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "RunMachine",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed86c7ce-4d72-433b-8e05-7fb3b28c7a71",
                    "path": "<Keyboard>/q",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae8f4d68-01b8-413d-a093-c7a399b1f2f6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "f1d9d408-a4e3-478d-9014-65f95f520926",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "202d0a8c-4269-435b-a333-af1bed493efa",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "96da7012-b11e-42a2-a61c-e6ba14130b40",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9fd65bc3-2445-4fbf-a037-44fc7fb03104",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6a5d63e0-807e-42eb-b469-2999ad112d9a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "0d6d9931-e58c-4558-859a-eced997f7298",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5207d76a-d37e-4a81-bdd8-c9421f017ef6",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "eff3c91f-075e-452c-ac4d-0f87be7848f8",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8a49488a-e053-4ce1-bddd-5cd35af7eca4",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "963ed463-0cd3-4ea6-940e-b5e349cdc1ec",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UI",
            "id": "6e8b2996-9bc4-404c-a715-89076f6bae23",
            "actions": [
                {
                    "name": "Number1",
                    "type": "Button",
                    "id": "1de91486-74ae-4299-aa7f-49e0915cadf8",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Number2",
                    "type": "Button",
                    "id": "0201ff4c-a51c-41c2-9d64-46c7493ef7f0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Number3",
                    "type": "Button",
                    "id": "b3cee324-e482-4ae2-aa72-a0c4785b9540",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Number4",
                    "type": "Button",
                    "id": "df899edf-edc3-4ef9-a9fb-688ec17008e1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Number5",
                    "type": "Button",
                    "id": "aa8f054e-256d-404e-9e58-a9e030972ff2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Number6",
                    "type": "Button",
                    "id": "c6704333-925b-4423-94ed-31e62e5245ea",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Number7",
                    "type": "Button",
                    "id": "fb3e64aa-5a25-44e6-942f-0a4d5d1efa7e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Number8",
                    "type": "Button",
                    "id": "5c93b747-3d2d-4998-a885-afd22090f95f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Number9",
                    "type": "Button",
                    "id": "8ba5fa31-907a-4d6e-a9a0-d52956bd1580",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Number0",
                    "type": "Button",
                    "id": "db80826b-8a67-4807-8f1e-8dc8fe062840",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Inventory",
                    "type": "Button",
                    "id": "d7f47bcf-45fc-45f8-96b0-88417bfd4d1b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Map",
                    "type": "Button",
                    "id": "d6920da7-4254-4166-a006-9764310d128d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1a443824-9b0d-409f-a7d4-862c6f3923cf",
                    "path": "<Keyboard>/1",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Number1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "257708fe-0d15-4a69-9b5e-88fbf3fe2db7",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Number2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1da06811-822e-46ec-9372-c30445dcda51",
                    "path": "<Keyboard>/3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Number3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b584c1c8-8114-429d-82ac-d35299fdb6aa",
                    "path": "<Keyboard>/4",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Number4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50ff408d-e3a0-4057-a7ba-5bb068d2b75e",
                    "path": "<Keyboard>/5",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Number5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "306c1969-8657-4be3-8d08-686633c507a3",
                    "path": "<Keyboard>/6",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Number6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0b69975a-b0a0-455d-9d8c-af78cdd59599",
                    "path": "<Keyboard>/7",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Number7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f71920fc-fe95-4e30-a601-b369e6814a03",
                    "path": "<Keyboard>/8",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Number8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f2a624e-f47f-4d5e-8006-e4e693e87dbf",
                    "path": "<Keyboard>/9",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Number9",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b161d4f-59c8-4fd5-9d1f-115b19fbc2ac",
                    "path": "<Keyboard>/0",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Number0",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ffd78a84-f373-4996-9159-879b069424e6",
                    "path": "<Keyboard>/tab",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "59dea3cf-a8fd-433e-9cfc-870f3d2f31dc",
                    "path": "<Keyboard>/m",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Map",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC_Scheme",
            "bindingGroup": "PC_Scheme",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}